Added more shop buttons

--- a/MathGame/about.html
+++ b/MathGame/about.html
@@ -155,5 +155,5 @@
 	  <script src="global.js?v=6"></script>
 	  <!--<script src="cookies.js?v=1"></script>-->
 </body>
-
+<!-- https://icon-icons.com/users/RoundIcons/icon-sets/ Ikoner laget av RoundIcons -->
 </html>
