Added player images part 1

--- a/MathGame/about.html
+++ b/MathGame/about.html
@@ -6,10 +6,10 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pokémath</title>
-	<link rel="stylesheet" href="globalstyle.css?v=7">
+	<link rel="stylesheet" href="globalstyle.css?v=8">
 	<!--<link rel="stylesheet" href="cookies.css?v=1">-->
-	<link rel="stylesheet" href="menustyle.css?v=7">
-	<link rel="stylesheet" href="about.css?v=7">
+	<link rel="stylesheet" href="menustyle.css?v=8">
+	<link rel="stylesheet" href="about.css?v=8">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
 </head>
@@ -35,7 +35,7 @@
 				<div class="playercard-content">
 					<div class="trainercard">
 						<div class="card-avatar">
-							<img src="images/player.png" width="100"></img>
+							<img id="playerimagebig" src="images/player.png" width="100%"></img>
 						</div>
 						<div class="trainercard-details">
 						   <div class="trainercard-name">
@@ -126,6 +126,9 @@
 			<p>
 			Nettsiden bruker <a href="https://pokeapi.co/" alt="pokeapi.co">https://pokeapi.co/</a> sin database for å finne, og vise, informasjon om de forskjellige pokemonene.
 			Bildene er i hovedsak hentet fra poketwo.net (<a href="https://github.com/poketwo/poketwo" alt="github.com/poketwo">https://github.com/poketwo/poketwo</a>) sin bildedatabase. <br>
+			</p>
+			<p>
+			Hvis du ønsker å bidra til utviklingen av siden, kan du ta en titt på GitHub siden: <a href="https://github.com/Tirco/PokeMath" alt="PokeMath GITHub">https://github.com/Tirco/PokeMath</a>
 			</p>
 		
 			Flere av ikonene er hentet fra:<a href="https://www.flaticon.com/search?word=pokemon&type=icon" title="Flaticon.com"> Roundicons Freebies - Flaticon</a><br>
@@ -236,7 +239,7 @@
 </div>
 
 	  <!--<script src="main.js?v=1"></script>>-->
-	  <script src="global.js?v=7"></script>
+	  <script src="global.js?v=8"></script>
 	  <!--<script src="cookies.js?v=1"></script>-->
 </body>
 <!-- https://icon-icons.com/users/RoundIcons/icon-sets/ Ikoner laget av RoundIcons 
