--- a/MathGame/index.html
+++ b/MathGame/index.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pokémath</title>
-	<link rel="stylesheet" href="globalstyle.css?v=7">
-	<link rel="stylesheet" href="menustyle.css?v=7">
+	<link rel="stylesheet" href="globalstyle.css?v=8">
+	<link rel="stylesheet" href="menustyle.css?v=8">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 <div>
@@ -30,7 +30,7 @@
 			<div class="playercard-content">
 				<div class="trainercard">
 					<div class="card-avatar">
-						<img src="images/player.png" width="100"></img>
+						<img id="playerimagebig" src="images/player.png" width="100%"></img>
 					</div>
 					<div class="trainercard-details">
 					   <div class="trainercard-name">
@@ -281,9 +281,9 @@
 
 
 	  <!--<script src="main.js?v=1"></script>>-->
-	  <script src="global.js?v=7"></script>
+	  <script src="global.js?v=8"></script>
 	  <!--<script src="cookies.js?v=1"></script>-->
-	  <script src="menu.js?v=7"></script>
+	  <script src="menu.js?v=8"></script>
 </body>
 
 </html>
