--- a/MathGame/pokemath.html
+++ b/MathGame/pokemath.html
@@ -6,8 +6,8 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pokémath</title>
-	<link rel="stylesheet" href="globalstyle.css?v=7">
-	<link rel="stylesheet" href="pokemon.css?v=7">
+	<link rel="stylesheet" href="globalstyle.css?v=8">
+	<link rel="stylesheet" href="pokemon.css?v=8">
 	<!--<link rel="stylesheet" href="cookies.css?v=1">-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
@@ -34,7 +34,7 @@
 				<div class="playercard-content">
 					<div class="trainercard">
 						<div class="card-avatar">
-							<img src="images/player.png" width="100"></img>
+							<img id="playerimagebig" src="images/player.png" width="100%"></img>
 						</div>
 						<div class="trainercard-details">
 						   <div class="trainercard-name">
@@ -110,7 +110,7 @@
 		<p class="problem"></p> 
 		
 		<form action="" class="our-form">
-			<input type="text" class="our-field" autocomplete="off">
+			<input type="tel" pattern="[0-9.+-]*" inputmode="numeric" class="our-field" autocomplete="off">
 			<button>Svar</button>
 		</form>
 		
@@ -162,9 +162,9 @@
 	<a id="update-log" class="align-right" href="about.html#news">Nytt</a>
 </div>
 	  <!--<script src="main.js?v=1"></script>>-->
-	  <script src="alternateforms.js?v=7"></script>
-	  <script src="global.js?v=7"></script>
+	  <script src="alternateforms.js?v=8"></script>
+	  <script src="global.js?v=8"></script>
 	  <!--<script src="cookies.js?v=1"></script>-->
-	  <script src="math.js?v=7"></script>
-	  <script src="pokestuff.js?v=7"></script>
+	  <script src="math.js?v=8"></script>
+	  <script src="pokestuff.js?v=8"></script>
 </html>
