La til endringslogg

--- a/MathGame/about.html
+++ b/MathGame/about.html
@@ -171,6 +171,12 @@
 		</div>
 		<article class="content">
 			<h2 class="section-title">Nyheter</h1>
+				<p>01.05.2022</p>
+				- La til en GitHub side. Denne finner du i "Om siden".<br>
+				- La til spiller-ikoner i butikken.<br>
+				- La til feilmelding ved for langt navn.<br>
+				- Endret tastatur på mobile enheter.<br>
+				- Fikset småfeil.<br>
 				<p>15.04.2022</p>
 				- La til nye bakgrunner i butikken.<br>
 				- La til nye oppgraderinger i butikken.<br>
