la til lesekloden.no kilde

--- a/MathGame/about.html
+++ b/MathGame/about.html
@@ -122,6 +122,7 @@
 			<p>Pokemath.online er en læringsrik side hvor man kan få mengdetrening i addisjon, subtraksjon, multiplikasjon og divisjon. <br>
 			Nettsiden prøver på ingen måte å tjene penger, verken ved bruk av reklame eller salg.<br>
 			Formålet med siden er å skape en motiverende læringsarena for barn (og voksne) som er interessert i pokemon.<br>
+			Den originale idèen om å få pokemon for å gjøre matte kommer fra <a href=http://www.lesekloden.no" alt="Lesekloden.no">Lesekloden.no</a>
 			</p>
 			<p>
 			Nettsiden bruker <a href="https://pokeapi.co/" alt="pokeapi.co">https://pokeapi.co/</a> sin database for å finne, og vise, informasjon om de forskjellige pokemonene.
