La til lesekloden.no kilde

--- a/MathGame/pokemath.html
+++ b/MathGame/pokemath.html
@@ -142,10 +142,10 @@
     </div>
 	
 	<div class="overlay">
-		<div class="overlay-inner">
+		< class="overlay-inner">
 			<p class="end-message"></p>
 			<br>
-			<a id="pokeball" class="pokeball animate__animated animate__wobble animate__repeat-3 mt-2 mb-6 is-hidden"></a>
+			<a id="pokeball" class="pokeball animate__animated animate__wobble animate__repeat-3 mt-2 mb-6 is-hidden"></a> <!-- Pokeball animasjonsparameterene er fra lesekloden.no-->
 			<a id="new-catch-info" style="white-space:pre;"></a>
 			<br>
 			<button class="reset-button is-hidden">Fortsett</button>
