la til bilder for Hisui pokemon, ikke klar for publisering

--- a/MathGame/blank.html
+++ b/MathGame/blank.html
@@ -34,7 +34,7 @@
 				<div class="playercard-content">
 					<div class="trainercard">
 						<div class="card-avatar">
-							<img src="images/player.png" width="100"></img>
+							<img id="playerimagebig" src="images/player.png" width="100%"></img>
 						</div>
 						<div class="trainercard-details">
 						   <div class="trainercard-name">
@@ -105,18 +105,14 @@
 		</form>
 	  </div>
 <div class="main">
-	<!--<div id="cookieNotice" class="cookie-consent"> <span>Denne siden trenger tillatelse til å ta i bruk Cookies for å kunne lagre dine Pokêmon. <a href="https://www.privacypolicies.com/generic/" target="_blank" rel="noopener noreferrer" class="ml-1 text-decoration-none">Privacy policy</a> </span>
-		<div class="columns align-items-center justify-content-safe-center"> <button id="cookie-allow" class="allow-button">Tillat</button> <button id="cookie-cancel" class="allow-button">Avslå</button> </div>
-	</div>-->
-
+	
 </div>
-	<div class="botbar">
-		<a id="update-log" class="align-right" href="about.html#news">Nytt</a>
-	</div>
 
-	  <!--<script src="main.js?v=1"></script>>-->
-	  <script src="global.js??v=4"></script>
-	  <!--<script src="cookies.js?v=1"></script>-->
+<div class="botbar">
+	<a id="update-log" class="align-right" href="about.html#news">Nytt</a>
+</div>
+
+<script src="global.js?v=8"></script>
 </body>
 
 </html>
