Endret pokedex og about.html

--- a/MathGame/about.html
+++ b/MathGame/about.html
@@ -172,6 +172,10 @@
 		</div>
 		<article class="content">
 			<h2 class="section-title">Nyheter</h1>
+				<p>27.08.2022</p>
+				- Oppdaterte Om siden.<br>
+				- Startet arbeid for en ny funksjon når man klikker på en fanget pokemon. Denne er ikke klar enda.<br>
+				- La til Hisuian pokemon og variasjonene deres.<br>
 				<p>01.05.2022</p>
 				- La til en GitHub side. Denne finner du i "Om siden".<br>
 				- La til spiller-ikoner i butikken.<br>
