--- a/MathGame/dex.html
+++ b/MathGame/dex.html
@@ -110,6 +110,7 @@
 			<button id="filterAllBtn" class="btn active " onclick="filterSelection('all')"> Vis alle</button>
 			<button class="btn" onclick="filterSelection('alolan')"> Alolan</button>
 			<button class="btn" onclick="filterSelection('galarian')"> Galarian</button>
+			<button class="btn" onclick="filterSelection('hisuian')"> Hisuian</button>
 			<button class="btn" onclick="filterSelection('Shiny')"> Shiny</button>
 			<button class="btn" onclick="filterSelection('Legendarisk')"> Legendarisk</button>
 			<button class="btn" onclick="filterSelection('Mytisk')"> Mytisk</button>
