--- a/MathGame/pokemath.html
+++ b/MathGame/pokemath.html
@@ -111,7 +111,7 @@
 		<div class="input">		
 			<button class="flip-btn" onClick="swapNegative()">+/-</button>
 			<form action="" class="our-form">
-				<input type="number" pattern="[0-9.+-]*" inputmode="numeric" class="our-field" autocomplete="off">
+				<input type="number" pattern="^\d*(\.\d{0,5})?$" step="any" inputmode="numeric" class="our-field" autocomplete="off">
 				<button style="height: 50px">Svar</button>
 			</form></div>
 
