--- a/MathGame/about.html
+++ b/MathGame/about.html
@@ -122,7 +122,7 @@
 			<p>Pokemath.online er en læringsrik side hvor man kan få mengdetrening i addisjon, subtraksjon, multiplikasjon og divisjon. <br>
 			Nettsiden prøver på ingen måte å tjene penger, verken ved bruk av reklame eller salg.<br>
 			Formålet med siden er å skape en motiverende læringsarena for barn (og voksne) som er interessert i pokemon.<br>
-			Den originale idèen om å få pokemon for å gjøre matte kommer fra <a href=http://www.lesekloden.no" alt="Lesekloden.no">Lesekloden.no</a>
+			Den originale idèen om å få pokemon for å gjøre matte kommer fra <a href="http://www.lesekloden.no" alt="Lesekloden.no">Lesekloden.no</a>
 			</p>
 			<p>
 			Nettsiden bruker <a href="https://pokeapi.co/" alt="pokeapi.co">https://pokeapi.co/</a> sin database for å finne, og vise, informasjon om de forskjellige pokemonene.
@@ -172,6 +172,11 @@
 		</div>
 		<article class="content">
 			<h2 class="section-title">Nyheter</h1>
+				<p>--.09.2022</p>
+				- La til egenvalgt modus.<br>
+				- La til funksjoner som tillater desimaltall.<br>
+				- Fikset småfeil i lenker.<br>
+				- Fikset at feil bilde ble brukt på Hisuian Goodra. Om du allerede har fanget denne pokemonen vil feilen vedvare.<br>
 				<p>27.08.2022</p>
 				- Oppdaterte Om siden.<br>
 				- Startet arbeid for en ny funksjon når man klikker på en fanget pokemon. Denne er ikke klar enda.<br>
