--- a/MathGame/about.html
+++ b/MathGame/about.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
 <html lang="en">
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+<!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>-->
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +14,20 @@
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
 </head>
 <body>
+	<div class="cookie-container" id="cookie-container">
+		<h2 class="cookie-header">Cookie Policy</h2>
+		<div class="">
+			<p class="cookie-text">
+				Denne siden bruker Cookies. Disse bruker vi for å kunne lagre pokèmonene og spillerdataen din på din enhet. Ved å bruke denne siden godkjenner du vår <a href="about.html#cookies">Cookie Policy </a>(Engelsk). Velger du å trykke "Nei takk" vil siden prøve å lukke seg selv.
+			</p>
+			<button class="button-1" onClick="acceptCookies()">
+				Okay!
+			</button>
+			<button class="button-2" onclick="window.open('', '_self', ''); window.close();">
+				Nei takk.
+			</button>
+		</div>
+	</div>
 	<div>
 		<div class="topbar">
 			<a href="index.html" id="backbutton">&#8249;</a>
@@ -172,11 +186,13 @@
 		</div>
 		<article class="content">
 			<h2 class="section-title">Nyheter</h1>
-				<p>--.09.2022</p>
+				<p>11.09.2022</p>
 				- La til egenvalgt modus.<br>
 				- La til funksjoner som tillater desimaltall.<br>
 				- Fikset småfeil i lenker.<br>
 				- Fikset at feil bilde ble brukt på Hisuian Goodra. Om du allerede har fanget denne pokemonen vil feilen vedvare.<br>
+				- Fikset Cookie Consent pop-up.<br>
+				- La til en offentlig Cookie Policy.<br>
 				<p>27.08.2022</p>
 				- Oppdaterte Om siden.<br>
 				- Startet arbeid for en ny funksjon når man klikker på en fanget pokemon. Denne er ikke klar enda.<br>
@@ -250,6 +266,51 @@
 				- La til en teller for antall pokemon og poeng.<br>
 				- Tok i bruk cookies.<br>
 				- La til funksjoner som hindrer at man med et uhell kan gå forbi en pokemon.</p>
+		</article>
+	</section>
+	<section id="cookies" class="section">
+		<div class="image-container">
+			<img class="item.image" src="images/backgrounds/bg-010.png" alt=""></img>
+		</div>
+		<article class="content">
+			<h2 class="section-title">Cookie Policy</h1>
+			<p>
+			Please read this cookie policy (“cookie policy”, "policy") carefully before using the Pokemath website
+			(“website”, "service") operated by Tirco ("us", 'we", "our").
+			
+			<h3>What are cookies?</h3>
+			<p>Cookies are simple text files that are stored on your computer or mobile device by a website`s
+			server. Each cookie is unique to your web browser. It will contain some anonymous information
+			such as a unique identifier, website`s domain name, and some digits and numbers.</p>
+			
+			<h2>What types of cookies do we use?</h2>
+			
+			<h3>Necessary cookies</h3>
+			Necessary cookies allow us to offer you the best possible experience when accessing and
+			navigating through our website and using its features. For example, these cookies let us
+			recognize that you have created an account and have logged into that account.
+			
+			<h3>Functionality cookies</h3>
+			Functionality cookies let us operate the site in accordance with the choices you make. For
+			example, we will recognize your username and remember how you customized the site during
+			future visits.
+
+			<h3>Analytical cookies</h3>
+			These cookies enable us and third-party services to collect aggregated data for statistical
+			purposes on how our visitors use the website. These cookies do not contain personal
+			information such as names and email addresses and are used to help us improve your user
+			experience of the website.
+			
+			<h3>How to delete cookies?</h3>
+			If you want to restrict or block the cookies that are set by our website, you can do so through
+			your browser setting. Alternatively, you can visit <a href="http://www.internetcookies.com">www.internetcookies.com</a>, which contains
+			comprehensive information on how to do this on a wide variety of browsers and devices. You
+			will find general information about cookies and details on how to delete cookies from your
+			device.
+
+			<h3>Contacting us</h3>
+			If you have any questions about this policy or our use of cookies, please <a href="about.html#contact">contact us</a>.
+			</p>
 		</article>
 	</section>
 </div>
