--- a/MathGame/customizer.html
+++ b/MathGame/customizer.html
@@ -1,7 +1,6 @@
 <DOCTYPE html>
 <html lang="en">
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +13,20 @@
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
 </head>
 <body>
+	<div class="cookie-container" id="cookie-container">
+		<h2 class="cookie-header">Cookie Policy</h2>
+		<div class="">
+			<p class="cookie-text">
+				Denne siden bruker Cookies. Disse bruker vi for å kunne lagre pokèmonene og spillerdataen din på din enhet. Ved å bruke denne siden godkjenner du vår <a href="about.html#cookies">Cookie Policy </a>(Engelsk). Velger du å trykke "Nei takk" vil siden prøve å lukke seg selv.
+			</p>
+			<button class="button-1" onClick="acceptCookies()">
+				Okay!
+			</button>
+			<button class="button-2" onclick="window.open('', '_self', ''); window.close();">
+				Nei takk.
+			</button>
+		</div>
+	</div>
 	<div>
 		<div class="topbar">
 			<a href="index.html" id="backbutton">&#8249;</a>
@@ -186,9 +199,9 @@
 		</div>
 		<button class="button-1" id="useform" onClick="handleUse()" type="button"> Bruk </button> 
 		<button class="button-1" id="copyform"onClick="handleCopy()" type="button"> Kopier </button>
-		<button class="button-1" id="qrcreate"onClick="generateBarCode()" type="button"> Lag QR-Kode </button>
+		<button class="button-1" id="qrcreate"onClick="generateBarCode()" type="button" > Lag QR-Kode </button>
 		<div>
-		<img id='barcode' src="https://api.qrserver.com/v1/create-qr-code/?data=Pokemath.online&amp;size=250x250" alt="" title="QR Kode" width="250" height="250" style="display: none;"/>
+		<img class="barcode" id='barcode' src="https://api.qrserver.com/v1/create-qr-code/?data=Pokemath.online&amp;size=250x250" alt="" title="QR Kode" width="250" height="250" style="display: none;"/>
 		</div>
 	</form>
 	
