--- a/MathGame/dex.html
+++ b/MathGame/dex.html
@@ -1,7 +1,6 @@
 <DOCTYPE html>
 <html lang="en">
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +13,20 @@
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
 </head>
 <div>
+	<div class="cookie-container" id="cookie-container">
+		<h2 class="cookie-header">Cookie Policy</h2>
+		<div class="">
+			<p class="cookie-text">
+				Denne siden bruker Cookies. Disse bruker vi for å kunne lagre pokèmonene og spillerdataen din på din enhet. Ved å bruke denne siden godkjenner du vår <a href="about.html#cookies">Cookie Policy </a>(Engelsk). Velger du å trykke "Nei takk" vil siden prøve å lukke seg selv.
+			</p>
+			<button class="button-1" onClick="acceptCookies()">
+				Okay!
+			</button>
+			<button class="button-2" onclick="window.open('', '_self', ''); window.close();">
+				Nei takk.
+			</button>
+		</div>
+	</div>
 	<div class="topbar">
 		<a href="index.html" id="backbutton">&#8249;</a>
 		<a href="shop.html" id="money" class="topbar-icon-left">
