--- a/MathGame/index.html
+++ b/MathGame/index.html
@@ -10,6 +10,20 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 <div>
+	<div class="cookie-container" id="cookie-container">
+		<h2 class="cookie-header">Cookie Policy</h2>
+		<div class="">
+			<p class="cookie-text">
+				Denne siden bruker Cookies. Disse bruker vi for å kunne lagre pokèmonene og spillerdataen din på din enhet. Ved å bruke denne siden godkjenner du vår <a href="about.html#cookies">Cookie Policy </a>(Engelsk). Velger du å trykke "Nei takk" vil siden prøve å lukke seg selv.
+			</p>
+			<button class="button-1" onClick="acceptCookies()">
+				Okay!
+			</button>
+			<button class="button-2" onclick="window.open('', '_self', ''); window.close();">
+				Nei takk.
+			</button>
+		</div>
+	</div>
 	<div class="topbar">
 		<a href="index.html" id="backbutton">&#8249;</a>
 		<a href="shop.html" id="money" class="topbar-icon-left">
@@ -272,6 +286,33 @@
 				</p>
 			</footer>
 		</div>
+		<div class="bigcard"  id="stage-custom" onclick="location.href='customizer.html';">
+			<div class="card-content">
+			  <div class="has-text-centered" id="menu-image-c">
+				<div class="card-image" style="background-image: url('images/gear.png'); height: 128px; width: 128px; background-size: cover;">&nbsp;</div>
+			  </div>
+			</div>
+			<div class="card-footer">
+			  <p class="card-footer-item">
+				<strong style="text-transform: capitalize;">Eget Nivå</strong>
+			  </p>
+			</div>
+			<footer class="card-footer">
+			  <p class="card-footer-item">
+				  Still inn ditt eget nivå.
+			  </p>
+		  	</footer>
+			<footer class="card-footer">
+				<p class="card-footer-item">
+				</p>
+			</footer>
+			<footer class="card-footer">
+				<p class="card-footer-item"></p>
+			</footer>
+			<footer class="card-footer">
+				<p class="card-footer-item"></p>
+			</footer>
+	  </div>
 	</div>
 </div>
 <div class="botbar">
