--- a/MathGame/pokemath.html
+++ b/MathGame/pokemath.html
@@ -1,7 +1,6 @@
 <DOCTYPE html>
 <html lang="en">
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +12,35 @@
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
 </head>
 <div class="main">
+	<div class="cookie-container" id="cookie-container">
+		<h2 class="cookie-header" >Cookie Policy</h2>
+		<div class="">
+			<p class="cookie-text">
+				Denne siden bruker Cookies. Disse bruker vi for å kunne lagre pokèmonene og spillerdataen din på din enhet. Ved å bruke denne siden godkjenner du vår <a href="about.html#cookies">Cookie Policy </a>(Engelsk). Velger du å trykke "Nei takk" vil siden prøve å lukke seg selv.
+			</p>
+			<button class="button-1" onClick="acceptCookies()">
+				Okay!
+			</button>
+			<button class="button-2" onclick="window.open('', '_self', ''); window.close();">
+				Nei takk.
+			</button>
+		</div>
+	</div>
 	<div>
+			<div class="cookie-container" id="cookie-container">
+		<h2 class="cookie-header">Cookie Policy</h2>
+		<div class="">
+			<p class="cookie-text">
+				Denne siden bruker Cookies. Disse bruker vi for å kunne lagre pokèmonene og spillerdataen din på din enhet. Ved å bruke denne siden godkjenner du vår <a href="about.html#cookies">Cookie Policy </a>(Engelsk). Velger du å trykke "Nei takk" vil siden prøve å lukke seg selv.
+			</p>
+			<button class="button-1" onClick="acceptCookies()">
+				Okay!
+			</button>
+			<button class="button-2" onclick="window.open('', '_self', ''); window.close();">
+				Nei takk.
+			</button>
+		</div>
+	</div>
 		<div class="topbar">
 			<a href="index.html" id="backbutton">&#8249;</a>
 			<a href="shop.html" id="money" class="topbar-icon-left">
@@ -131,13 +158,6 @@
 		<br>
 	</div>
 	
-	
-	
-
-<!--	<div id="cookieNotice" class="cookie-consent"> <span>Denne siden tar i bruk Cookies for å kunne lagre dine pokémon og annen data. <a href="https://www.privacypolicies.com/generic/" target="_blank" rel="noopener noreferrer" class="ml-1 text-decoration-none">Privacy policy</a> </span>
-		<div class="columns align-items-center justify-content-safe-center"> <button id="cookie-allow" class="allow-button">Tillat</button> <button id="cookie-cancel" class="allow-button">Avslå</button> </div>
-	</div>-->
-	
 	<div class="columns is-multiline is-mobile" id="pokedex">
     </div>
 	
@@ -156,11 +176,6 @@
 </div>
 
 <div class="botbar">
-	<a id="botbar-1" onclick="location.href='pokemath.html?stage=1';">1</a>
-	<a id="botbar-2" onclick="location.href='pokemath.html?stage=2';">2</a>
-	<a id="botbar-3" onclick="location.href='pokemath.html?stage=3';">3</a>
-	<a id="botbar-4" onclick="location.href='pokemath.html?stage=4';">4</a>
-	<a id="botbar-5" onclick="location.href='pokemath.html?stage=5';">5</a>
 	<a id="update-log" class="align-right" href="about.html#news">Nytt</a>
 </div>
 	  <!--<script src="main.js?v=1"></script>>-->
