--- a/MathGame/pokeviewer.html
+++ b/MathGame/pokeviewer.html
@@ -9,10 +9,23 @@
 	<!--<link rel="stylesheet" href="cookies.css?v=1">-->
 	<link rel="stylesheet" href="menustyle.css?v=8">
 	<link rel="stylesheet" href="shop.css?v=8">
-	<script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
 </head>
 <body>
+	<div class="cookie-container" id="cookie-container">
+		<h2 class="cookie-header">Cookie Policy</h2>
+		<div class="">
+			<p class="cookie-text">
+				Denne siden bruker Cookies. Disse bruker vi for å kunne lagre pokèmonene og spillerdataen din på din enhet. Ved å bruke denne siden godkjenner du vår <a href="about.html#cookies">Cookie Policy </a>(Engelsk). Velger du å trykke "Nei takk" vil siden prøve å lukke seg selv.
+			</p>
+			<button class="button-1" onClick="acceptCookies()">
+				Okay!
+			</button>
+			<button class="button-2" onclick="window.open('', '_self', ''); window.close();">
+				Nei takk.
+			</button>
+		</div>
+	</div>
 	<div>
 		<div class="topbar">
 			<a href="index.html" id="backbutton">&#8249;</a>
