removed cookies.js

--- a/MathGame/index.html
+++ b/MathGame/index.html
@@ -304,13 +304,15 @@
 		  	</footer>
 			<footer class="card-footer">
 				<p class="card-footer-item">
+				(Beta)
 				</p>
 			</footer>
 			<footer class="card-footer">
 				<p class="card-footer-item"></p>
 			</footer>
 			<footer class="card-footer">
-				<p class="card-footer-item"></p>
+				<p class="card-footer-item">
+				</p>
 			</footer>
 	  </div>
 	</div>
