--- a/MathGame/dex.html
+++ b/MathGame/dex.html
@@ -129,29 +129,33 @@
 			<button class="btn" onclick="filterSelection('Mytisk')"> Mytisk</button>
 			<button class="btn" onclick="filterSelection(' mega ')"> Mega</button>
 			<button class="btn" onclick="filterSelection('gigantamax')"> Gigantamax</button>
+			<button class="btn dropbtn">
+				Typer 
+			</button>
+			<div class="dropdown-content">
+				<button class="typecard type-bug btn" onclick="filterSelection('bug')"> Bug</button>
+				<button class="typecard type-dark btn" onclick="filterSelection('dark')"> Dark</button>
+				<button class="typecard type-dragon btn" onclick="filterSelection('dragon')"> Dragon</button><br>
+				<button class="typecard type-electric btn" onclick="filterSelection('electric')"> Electric</button>
+				<button class="typecard type-fairy btn" onclick="filterSelection('fairy')"> Fairy</button>
+				<button class="typecard type-fighting btn" onclick="filterSelection('fighting')"> Fighting</button><br>
+				<button class="typecard type-fire btn" onclick="filterSelection('fire')"> Fire</button>
+				<button class="typecard type-flying btn" onclick="filterSelection('flying')"> Flying</button>
+				<button class="typecard type-ghost btn" onclick="filterSelection('ghost')"> Ghost</button><br>
+				<button class="typecard type-grass btn" onclick="filterSelection('grass')"> Grass</button>
+				<button class="typecard type-ground btn" onclick="filterSelection('ground')"> Ground</button>
+				<button class="typecard type-ice btn" onclick="filterSelection('ice')"> Ice</button><br>
+				<button class="typecard type-normal btn" onclick="filterSelection('normal')"> Normal</button>
+				<button class="typecard type-poison btn" onclick="filterSelection('poison')"> Poison</button>
+				<button class="typecard type-psychic btn" onclick="filterSelection('psychic')"> Psychic</button><br>
+				<button class="typecard type-rock btn" onclick="filterSelection('rock')"> Rock</button>
+				<button class="typecard type-steel btn" onclick="filterSelection('steel')"> Steel</button>
+				<button class="typecard type-water btn" onclick="filterSelection('water')"> Water</button>
+			</div>
 		
 		<input type="text" class="align-right" placeholder="Søk.." id="searchInput" onkeyup="textFilterFunction()">
 		<br>
-		<div class="align-right">
-			<button class="typecard type-bug btn" onclick="filterSelection('bug')"> Bug</button>
-			<button class="typecard type-dark btn" onclick="filterSelection('dark')"> Dark</button>
-			<button class="typecard type-dragon btn" onclick="filterSelection('dragon')"> Dragon</button><br>
-			<button class="typecard type-electric btn" onclick="filterSelection('electric')"> Electric</button>
-			<button class="typecard type-fairy btn" onclick="filterSelection('fairy')"> Fairy</button>
-			<button class="typecard type-fighting btn" onclick="filterSelection('fighting')"> Fighting</button><br>
-			<button class="typecard type-fire btn" onclick="filterSelection('fire')"> Fire</button>
-			<button class="typecard type-flying btn" onclick="filterSelection('flying')"> Flying</button>
-			<button class="typecard type-ghost btn" onclick="filterSelection('ghost')"> Ghost</button><br>
-			<button class="typecard type-grass btn" onclick="filterSelection('grass')"> Grass</button>
-			<button class="typecard type-ground btn" onclick="filterSelection('ground')"> Ground</button>
-			<button class="typecard type-ice btn" onclick="filterSelection('ice')"> Ice</button><br>
-			<button class="typecard type-normal btn" onclick="filterSelection('normal')"> Normal</button>
-			<button class="typecard type-poison btn" onclick="filterSelection('poison')"> Poison</button>
-			<button class="typecard type-psychic btn" onclick="filterSelection('psychic')"> Psychic</button><br>
-			<button class="typecard type-rock btn" onclick="filterSelection('rock')"> Rock</button>
-			<button class="typecard type-steel btn" onclick="filterSelection('steel')"> Steel</button>
-			<button class="typecard type-water btn" onclick="filterSelection('water')"> Water</button>
-		</div>
+
 	</div>
 
 	<div class="columns is-multiline is-mobile" id="pokedex">
