--- a/MathGame/customizer.html
+++ b/MathGame/customizer.html
@@ -5,10 +5,10 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pokémath</title>
-	<link rel="stylesheet" href="globalstyle.css??v=4">
+	<link rel="stylesheet" href="globalstyle.css??v=9">
 	<!--<link rel="stylesheet" href="cookies.css?v=1">-->
-	<link rel="stylesheet" href="menustyle.css??v=4">
-	<link rel="stylesheet" href="customizer.css??v=4">
+	<link rel="stylesheet" href="menustyle.css??v=9">
+	<link rel="stylesheet" href="customizer.css??v=9">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
 </head>
@@ -17,14 +17,14 @@
 		<h2 class="cookie-header">Cookie Policy</h2>
 		<div class="">
 			<p class="cookie-text">
-				Denne siden bruker Cookies. Disse bruker vi for å kunne lagre pokèmonene og spillerdataen din på din enhet. Ved å bruke denne siden godkjenner du vår <a href="about.html#cookies">Cookie Policy </a>(Engelsk). Velger du å trykke "Nei takk" vil siden prøve å lukke seg selv.
+				Denne siden bruker Cookies. Disse bruker vi for å kunne lagre pokèmonene og spillerdataen din på din enhet. Ved å bruke denne siden godkjenner du vår <a href="about.html#cookies">Cookie Policy </a>(Engelsk). Siden vil ikke fungere optimalt om du ikke godkjenner bruken av cookies.
 			</p>
 			<button class="button-1" onClick="acceptCookies()">
 				Okay!
 			</button>
-			<button class="button-2" onclick="window.open('', '_self', ''); window.close();">
-				Nei takk.
-			</button>
+			<a class="button-2" href="about.html#cookies">
+				Mer informasjon.
+			</a>
 		</div>
 	</div>
 	<div>
@@ -134,7 +134,7 @@
 			<label for="first"> Høyeste ledd: </label>
 			<input type="number" value="100" id="addMaxSel" required autocomplete="off">
 			
-			<label for="quantity"> Decimaler (0-5): </label>
+			<label for="quantity"> Desimaler (0-5): </label>
 			<input type="number" value="0" id="addDecSel" min="0" max="5" required autocomplete="off">
 		</div>
 
@@ -150,7 +150,7 @@
 			<label for="first">Høyeste ledd:</label>
 			<input type="number" id="subMaxSel" value="100" class="form-control" required autocomplete="off">
 
-			<label for="quantity"> Decimaler (0-5): </label>
+			<label for="quantity"> Desimaler (0-5): </label>
 			<input type="number" id="subDecSel" value="0" id="subDec" min="0" max="5" required autocomplete="off">
 
 			<a>Tillat negative differenser:</a>
@@ -172,7 +172,7 @@
 			<label for="first">Høyeste faktor:</label>
 			<input type="number" id="mulMaxSel" value="10" class="form-control" required autocomplete="off">
 
-			<label for="quantity"> Decimaler (0-5): </label>
+			<label for="quantity"> Desimaler (0-5): </label>
 			<input type="number" value="0" id="mulDecSel" min="0" max="5" required autocomplete="off">
 		</div>
 
@@ -194,7 +194,7 @@
 			<label for="first">Høyeste kvotient: </label>
 			<input type="number" id="divMaxKvoSel" value="10" class="form-control" required autocomplete="off">
 
-			<label for="quantity"> Decimaler (0-5): </label>
+			<label for="quantity"> Desimaler (0-5): </label>
 			<input type="number" value="0" id="divDecSel" min="0" max="5" required autocomplete="off">
 		</div>
 		<button class="button-1" id="useform" onClick="handleUse()" type="button"> Bruk </button> 
@@ -214,8 +214,8 @@
 	<a id="update-log" class="align-right" href="about.html#news">Nytt</a>
 </div>
 
-<script src="global.js?v=8"></script>
-<script src="customizer.js?v=8"></script>
+<script src="global.js?v=9"></script>
+<script src="customizer.js?v=9"></script>
 </body>
 
 </html>
