--- a/MathGame/dex.html
+++ b/MathGame/dex.html
@@ -5,9 +5,9 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pokémath</title>
-	<link rel="stylesheet" href="globalstyle.css?v=8">
-	<link rel="stylesheet" href="dex.css?v=8">
-	<link rel="stylesheet" href="pokemon.css?v=8">
+	<link rel="stylesheet" href="globalstyle.css?v=9">
+	<link rel="stylesheet" href="dex.css?v=9">
+	<link rel="stylesheet" href="pokemon.css?v=9">
 	<!--<link rel="stylesheet" href="cookies.css?v=1">-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
@@ -17,14 +17,14 @@
 		<h2 class="cookie-header">Cookie Policy</h2>
 		<div class="">
 			<p class="cookie-text">
-				Denne siden bruker Cookies. Disse bruker vi for å kunne lagre pokèmonene og spillerdataen din på din enhet. Ved å bruke denne siden godkjenner du vår <a href="about.html#cookies">Cookie Policy </a>(Engelsk). Velger du å trykke "Nei takk" vil siden prøve å lukke seg selv.
+				Denne siden bruker Cookies. Disse bruker vi for å kunne lagre pokèmonene og spillerdataen din på din enhet. Ved å bruke denne siden godkjenner du vår <a href="about.html#cookies">Cookie Policy </a>(Engelsk). Siden vil ikke fungere optimalt om du ikke godkjenner bruken av cookies.
 			</p>
 			<button class="button-1" onClick="acceptCookies()">
 				Okay!
 			</button>
-			<button class="button-2" onclick="window.open('', '_self', ''); window.close();">
-				Nei takk.
-			</button>
+			<a class="button-2" href="about.html#cookies">
+				Mer informasjon.
+			</a>
 		</div>
 	</div>
 	<div class="topbar">
@@ -172,9 +172,9 @@
 	</div>
 
 	  <!--<script src="main.js?v=1"></script>>-->
-	  <script src="global.js?v=8"></script>
+	  <script src="global.js?v=9"></script>
 	  <!--<script src="cookies.js?v=1"></script>-->
-	  <script src="dex.js?v=8"></script>
+	  <script src="dex.js?v=9"></script>
 </body>
 
 </html>
