La til funksjoner for å stoppe juksing (svar = 0)

--- a/MathGame/about.html
+++ b/MathGame/about.html
@@ -186,6 +186,11 @@
 		</div>
 		<article class="content">
 			<h2 class="section-title">Nyheter</h1>
+				<p>19.09.2022</p>
+				- Fikset deling i egenvalgt modus.<br>
+				- Gjorde så egenvalgt modus automatisk regner ut hvilken vanskelighetsgrad du spiller på.<br>
+				- Leste igjennom tilbakemeldingene deres. (Takk!)<br>
+				- Fjernet muligheten for å missbruke egenvalgt modus til å få for lette oppgaver. Juksepaver blir ikke pokemonmestere!<br>
 				<p>14.09.2022</p>
 				- La til egenvalgt modus. (Beta)<br>
 				- La til funksjoner som tillater desimaltall.<br>
