--- a/MathGame/about.html
+++ b/MathGame/about.html
@@ -186,6 +186,15 @@
 		</div>
 		<article class="content">
 			<h2 class="section-title">Nyheter</h1>
+				<p>24.09.2022</p>
+				- Gjorde klar for Halloween! Gjennom hele oktober kan man fange 18 spesielle pokemon ved å bruke egget som dukker opp på regnesiden. Man kan også få ekstra mange dark og ghost-pokemon!<br>
+				- Fikset småfeil på pokedexen.<br>
+				- La til flere nye bakgrunner i butikken.<br>
+				- Fikset en feil med antall mulige desimaler.<br>
+				- Fikset flere småfeil med custom mode.<br>
+				- Takk for alle tilbakemeldingene! Jeg leser alle jeg får!<br>
+				<p>20.09.2022</p>
+				- Fikset en feil som gjorde at man ikke kunne få pokemon i custom mode.<br>
 				<p>19.09.2022</p>
 				- Fikset deling i egenvalgt modus.<br>
 				- Gjorde så egenvalgt modus automatisk regner ut hvilken vanskelighetsgrad du spiller på.<br>
