--- a/MathGame/dex.html
+++ b/MathGame/dex.html
@@ -130,6 +130,7 @@
 			<button class="btn" onclick="filterSelection('Mytisk')"> Mytisk</button>
 			<button class="btn" onclick="filterSelection(' mega ')"> Mega</button>
 			<button class="btn" onclick="filterSelection('gigantamax')"> Gigantamax</button>
+			<button class="btn" onclick="filterSelection('-H')"> Halloween</button>
 			<button class="altbtn typedropdown" id="typedropdown"> Typer &#x25BC;
 				<div class="typecontent">
 					<a class="typecard2 type-bug btn" onclick="filterSelection('bug')"> Bug</a>
