--- a/MathGame/index.html
+++ b/MathGame/index.html
@@ -319,6 +319,14 @@
 </div>
 <div class="botbar">
 	<a href="https://docs.google.com/forms/d/e/1FAIpQLSfPSaP6xBqByUcgBCzj9akRM7vRFeUD0QuWZ2Z0uIyOqJHcPA/viewform?usp=sf_link">Hjelp oss med å bli bedre! Trykk her for å svare på en undersøkelse, og gi oss en tilbakemelding! (Google Forms)</a>
+	<a>Besøkende:</a>
+	<a id="visits">...</a>
+	<script>
+		function cb(response) {
+			document.getElementById('visits').innerText = response.value;
+		}
+	</script>
+	<script async src="https://api.countapi.xyz/hit/pokemath.online/visits?callback=cb"></script>
 	<a id="update-log" class="align-right" href="about.html#news">Nytt</a>
 </div>
 
