--- a/MathGame/shop.html
+++ b/MathGame/shop.html
@@ -262,6 +262,118 @@
 				</span>
 			</div>
 		</div>
+		<div class="carousel-cell" style="background-image: url('images/backgrounds/bg-011.png');">
+			<div class="carousel-caption" id="bg-011">
+				<h3>Bakgrunn 011</h3>
+				<a class="pricetag" data-price="50 000"> </a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="shopButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="shopButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne bakgrunnen kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/backgrounds/bg-012.png');">
+			<div class="carousel-caption" id="bg-012">
+				<h3>Bakgrunn 012</h3>
+				<a class="pricetag" data-price="50 000"> </a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="shopButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="shopButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne bakgrunnen kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/backgrounds/bg-013.png');">
+			<div class="carousel-caption" id="bg-013">
+				<h3>Bakgrunn 013</h3>
+				<a class="pricetag" data-price="50 000"> </a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="shopButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="shopButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne bakgrunnen kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/backgrounds/bg-014.png');">
+			<div class="carousel-caption" id="bg-014">
+				<h3>Bakgrunn 014</h3>
+				<a class="pricetag" data-price="50 000"> </a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="shopButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="shopButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne bakgrunnen kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/backgrounds/bg-015.png');">
+			<div class="carousel-caption" id="bg-015">
+				<h3>Bakgrunn 015</h3>
+				<a class="pricetag" data-price="50 000"> </a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="shopButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="shopButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne bakgrunnen kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/backgrounds/bg-016.png');">
+			<div class="carousel-caption" id="bg-016">
+				<h3>Bakgrunn 016</h3>
+				<a class="pricetag" data-price="50 000"> </a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="shopButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="shopButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne bakgrunnen kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/backgrounds/bg-017.png');">
+			<div class="carousel-caption" id="bg-017">
+				<h3>Bakgrunn 017</h3>
+				<a class="pricetag" data-price="50 000"> </a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="shopButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="shopButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne bakgrunnen kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/backgrounds/bg-018.png');">
+			<div class="carousel-caption" id="bg-018">
+				<h3>Bakgrunn 018</h3>
+				<a class="pricetag" data-price="50 000"> </a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="shopButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="shopButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne bakgrunnen kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
 	</div>
 	<button class="button-1 use centerposition" onClick="shopButtonUse()">Fjern Bakgrunn</button>
 	<br>
